--- a/valentine.html
+++ b/valentine.html
@@ -105,7 +105,7 @@
   <div class="card">
     <div class="emoji">🐱❤️</div>
 
-    <h2>DEEPSHIKHA, will you be my Valentine?</h2>
+    <h2> Hey!! Marigold🌻, will you be my Valentine?</h2>
 
     <div class="buttons" id="btnBox">
       <button id="yes">Yes</button>
